tests/spec/lex/snapshots/float_with_underscore_separators.snap
---
source: tests/spec/lex/mod.rs
description: 1_000.123_456
---
LexResult {
    tokens: [
        Token {
            kind: Float,
            text: "1_000.123_456",
            byte_offset: 0,
            byte_length: 13,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 13,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
