tests/spec/lex/snapshots/format_string_multiline_text.snap
---
source: tests/spec/lex/mod.rs
description: |-
  f"hello
  {name}
  world"
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "hello\n",
            byte_offset: 2,
            byte_length: 6,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "name",
            byte_offset: 9,
            byte_length: 4,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: FormatStringText,
            text: "\nworld",
            byte_offset: 14,
            byte_length: 6,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 21,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
