tests/spec/lex/snapshots/format_string_multiline_text_no_interpolation.snap
---
source: tests/spec/lex/mod.rs
description: |-
  f"a
  b"
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "a\nb",
            byte_offset: 2,
            byte_length: 3,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 5,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
