tests/spec/lex/snapshots/format_string_multiple_interpolations.snap
---
source: tests/spec/lex/mod.rs
description: "f\"hello {first} {last}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "hello ",
            byte_offset: 2,
            byte_length: 6,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "first",
            byte_offset: 9,
            byte_length: 5,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: FormatStringText,
            text: " ",
            byte_offset: 15,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "last",
            byte_offset: 17,
            byte_length: 4,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 21,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 22,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 23,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
