tests/spec/lex/snapshots/format_string_simple.snap
---
source: tests/spec/lex/mod.rs
description: "f\"hello world\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "hello world",
            byte_offset: 2,
            byte_length: 11,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 14,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
