tests/spec/lex/snapshots/format_string_with_addition.snap
---
source: tests/spec/lex/mod.rs
description: "f\"sum: {x + y}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "sum: ",
            byte_offset: 2,
            byte_length: 5,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "x",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: Plus,
            text: "+",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "y",
            byte_offset: 12,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 13,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 14,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 15,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
