tests/spec/lex/snapshots/format_string_with_char_brace.snap
---
source: tests/spec/lex/mod.rs
description: "f\"result: {c == '{'}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "result: ",
            byte_offset: 2,
            byte_length: 8,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 10,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "c",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: EqualDouble,
            text: "==",
            byte_offset: 13,
            byte_length: 2,
        },
        Token {
            kind: Char,
            text: "'{'",
            byte_offset: 16,
            byte_length: 3,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 19,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 20,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 21,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
