tests/spec/lex/snapshots/format_string_with_closing_brace_in_string.snap
---
source: tests/spec/lex/mod.rs
description: "f\"val: {map[\"}\"]}\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "val: ",
            byte_offset: 2,
            byte_length: 5,
        },
        Token {
            kind: FormatStringInterpolationStart,
            text: "{",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "map",
            byte_offset: 8,
            byte_length: 3,
        },
        Token {
            kind: LeftSquareBracket,
            text: "[",
            byte_offset: 11,
            byte_length: 1,
        },
        Token {
            kind: String,
            text: "\"}\"",
            byte_offset: 12,
            byte_length: 3,
        },
        Token {
            kind: RightSquareBracket,
            text: "]",
            byte_offset: 15,
            byte_length: 1,
        },
        Token {
            kind: FormatStringInterpolationEnd,
            text: "}",
            byte_offset: 16,
            byte_length: 1,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 17,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 18,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
