tests/spec/lex/snapshots/format_string_with_escaped_braces.snap
---
source: tests/spec/lex/mod.rs
description: "f\"literal {{ and }} braces\""
---
LexResult {
    tokens: [
        Token {
            kind: FormatStringStart,
            text: "f\"",
            byte_offset: 0,
            byte_length: 2,
        },
        Token {
            kind: FormatStringText,
            text: "literal {{ and }} braces",
            byte_offset: 2,
            byte_length: 24,
        },
        Token {
            kind: FormatStringEnd,
            text: "\"",
            byte_offset: 26,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 27,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
